[gd_scene load_steps=11 format=3 uid="uid://bft4md8srsqwu"]

[ext_resource type="Script" uid="uid://bn2t6wvoahrw2" path="res://scripts/game_manager.gd" id="1_p57ef"]
[ext_resource type="Script" uid="uid://bhndvyd45i6hu" path="res://scenes/audio_manager.gd" id="2_u5sy4"]
[ext_resource type="PackedScene" uid="uid://ctq2w5s7t108b" path="res://scenes/player_soul.tscn" id="3_gee14"]
[ext_resource type="Script" uid="uid://c2qcbcb6scuq8" path="res://scripts/PlayerCamera.gd" id="4_0tnpc"]
[ext_resource type="Script" uid="uid://c7ufxewu78sds" path="res://scripts/ui.gd" id="5_vtaks"]
[ext_resource type="AudioStream" uid="uid://cm7wx50nr0tmj" path="res://assets/forest_river_spirits.ogg" id="6_kvpfn"]
[ext_resource type="Texture2D" uid="uid://clnfs41mwltnm" path="res://assets/sSoul.png" id="6_u5sy4"]
[ext_resource type="Texture2D" uid="uid://quu7qnsptje7" path="res://assets/Blue Star.png" id="8_gee14"]
[ext_resource type="PackedScene" uid="uid://c8khn22o6q0bd" path="res://bg.tscn" id="9_0tnpc"]

[sub_resource type="LabelSettings" id="LabelSettings_tbgi4"]

[node name="Game" type="Node2D"]

[node name="Control" parent="." instance=ExtResource("9_0tnpc")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="player_soul" parent="." instance=ExtResource("3_gee14")]
z_index = 4
z_as_relative = false
position = Vector2(284, 40)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_p57ef")
world_bounds = Rect2(300, -100, 500, 500)
waypoint_threshold = 10
magnetism_range = 20.0

[node name="AudioManager" type="Node" parent="GameManager"]
script = ExtResource("2_u5sy4")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_0tnpc")
follow_target = NodePath("../player_soul")
max_zoom = Vector2(3, 3)
min_zoom = Vector2(0.5, 0.5)

[node name="Souls" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_vtaks")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_right = 64.0
offset_bottom = 43.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LifeBar" type="TextureProgressBar" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_progress = ExtResource("6_u5sy4")

[node name="ScoreLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SCORE"
label_settings = SubResource("LabelSettings_tbgi4")

[node name="Message" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Message"

[node name="ComboLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_top = 49.0
offset_right = -66.0
offset_bottom = 72.0
grow_horizontal = 0

[node name="PauseMenu" type="ColorRect" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03529412, 0.047058824, 0.101960786, 0.54509807)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MenuButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]
layer = 0
follow_viewport_enabled = true

[node name="BGParticles" type="CPUParticles2D" parent="UI/CanvasLayer"]
position = Vector2(283.865, 174.915)
texture = ExtResource("8_gee14")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kvpfn")
autoplay = true
